Recap: Javascript: jQuery: change/submit events, examples on an image slide show, form input validation, ajax requests and make sheet

--- a/recap/javascript/jQuery/index.html
+++ b/recap/javascript/jQuery/index.html
@@ -26,6 +26,10 @@
       <div class="blue-box">Blue</div>
       <div class="green-box">Green</div>
     </div>
+
+    <div class="gallery">
+      <img src="./images/laptop-mobile_small.jpg" alt="">
+    </div>
   
       <ul id="list">
         <li>
@@ -77,6 +81,16 @@
       <div class="gallery" data-anyname="some data">
 
       </div>
+
+
+      <select name="" id="">
+        <option value="">option 1</option>
+        <option value="">option 2</option>
+        <option value="">option 3</option>
+        <option value="">option 4</option>
+      </select><br>
+
+      <div id="flickr"> </div>
   
       <form action="" id="form1">
         <input type="text" name="" id="name" placeholder="Enter your name">
@@ -94,7 +108,7 @@
         <textarea cols="30" rows="10" id="message"></textarea>
         <span id="message-feedback"> </span><br>
   
-        <input type="checkbox" id="checkbox" checked> <label for="check1">check me</label><br>
+        <input type="checkbox" id="check1" checked> <label for="check1">check me</label><br>
         <span id="checkbox-feedback"> </span><br>
     
         <input type="submit" value="Submit">
