Add adjustments to the products card
- move the buttons to the right/lower end of the card
- adjust all font sizes to be larger and image size to be matching

--- a/projects/amz-eg/index.html
+++ b/projects/amz-eg/index.html
@@ -148,7 +148,7 @@
                     
                     <div class="main__main__products-list--item">
                         
-                        <a href="">
+                        <a href="" class="main__main__products-list--item--image--container">
                             <img src="./img/product-image.jpg" class="main__main__products-list--item--image" alt="product image">
                         </a>                        
                         <div class="main__main__products-list--item--description">
@@ -192,6 +192,8 @@
                             <span class="main__main__products-list--item--description--available">
                                 More than 99+ available
                             </span>
+
+                            <span class="main__main__products-list--item--description--spacer"></span>
 
                             <span class="main__main__products-list--item--description-buttons">
                                 <button class="main__main__products-list--item--description-buttons-add">Stock</button>
