Work on the desktop viewport styling for the orders page

--- a/projects/amz-eg/index-login.html
+++ b/projects/amz-eg/index-login.html
@@ -172,7 +172,7 @@
 
                                 <div class="login__email--container">
                                         <label for="login__email--field" class="login__email--label" >
-                                            <strong>Email or phone number</strong>
+                                            <h2>Email or phone number</h2>
                                         </label>
                                     <input type="text" id="login__email--field" name="login__email--field" aria-label="required, enter your phone number or your email" placeholder="">
                                     <span class="login__email--field--message" aria-live="true">
@@ -202,7 +202,7 @@
                                 <div class="login__password--container">
 
                                     <div class="login__password--header">
-                                        <label for="login__password--field" class="login__password--label"><strong>Amazon password</strong></label>
+                                        <label for="login__password--field" class="login__password--label"><h2>Amazon password</h2></label>
 
                                         <div class="login__password--current-phone" aria-label="click the following link to re-enter the email or phone number">
                                             for
