--- a/projects/amz-eg/index-orders.html
+++ b/projects/amz-eg/index-orders.html
@@ -96,10 +96,15 @@
                     <h1 class="main__main__content__orders-header--header">Your Orders</h1>
                     <div class="main__main__content__orders-header--search__container">
                         <span class="main__main__content__orders-header--search--field--container">
+                            <div class="logo_container">
+                                
                             <i class="main__main__content__orders-header--search--logo"></i>
+                            </div>
+                            <span class="main__main__content__orders-header--search--field--container2">
                             <input type="search" class="main__main__content__orders-header--search--field" placeholder="Search orders">
+                            <button type="button" class="main__main__content__orders-header--search--button">Search Orders</button>
+                            </span>
                         </span>
-                        <button type="button" class="main__main__content__orders-header--search--button">Search Orders</button>
                     </div> 
                 </div>
 
@@ -147,6 +152,7 @@
                                         <h3>ORDER # 404-0361719-9468379</h3>
                                         <span class="orders__result--header--list--item--order-details">
                                             <a href="">View order details</a>
+                                            <span aria-hidden="true" class="orders__result--header--list--item--order-details--separator"> | </span>
                                             <a href="">Invoice</a>
                                         </span>
                                     </li>
